# MusrRoot-parser

./: .gitignore  Cargo.toml  MusrRoot.xsd  README.md
.github/workflows/: general.yml
root-io/: Cargo.toml
root-io/src/core/: file_item.rs
root-ls/: Cargo.toml
src/: error.rs  lem23_his_0001.root  lem24_his_2000.root  main.rs  models.rs  musr_root_file_event_definition.txt  musr_root_file_parser.rs
