[package]
name = "plotting_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
plotters = "0.3.5"
plotpy = "0.5.1"
druid = "0.8.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
nom = "7.1.3"
root-io = { version = "0.3.0", path = "root-io" }
criterion = "0.3"
